fix(auth): Evita el cierre de sesión en fallo de login y corrige .gitignore
- Se modifica el interceptor de autenticación para no cerrar la sesión cuando la API devuelve un error 401 en la ruta de login, previniendo un bucle de redirección.
- Se actualizan las rutas en .gitignore para el directorio del servidor.

--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,12 @@
 /frontend/src/@mpgr
 
 # backend
-/back/dist
-/back/build
-/back/node_modules
-/back/.env
-/back/.env*.local
-/back/package-lock.json
+/server/dist
+/server/build
+/server/node_modules
+/server/.env
+/server/.env*.local
+/server/package-lock.json
 
 # misc
 .DS_Store
